--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style/style.css">
   
   <title>Frontend Mentor | Interactive card details form</title>
 
@@ -15,8 +16,56 @@
   </style>
 </head>
 <body>
+  <div class="color-background"></div>
+  <main>
+    <section>
 
-  0000 0000 0000 0000
+      <div class="cards">
+        <div class="recto card"></div>
+        <div class="verso card"></div>
+      </div>
+
+      <div class="formulaire">
+
+        <div class="first ligne">
+          <label for="">Cardholder Name</label>
+          <input placeholder="""></input>
+        </div>
+
+        <div class="second ligne">
+          <label for="">Card Number</label>
+          <input  placeholder=""></input>
+        </div>
+
+        <div class="third ligne">
+
+          <div class="date">
+
+            <label for="">Exp.DATE  (MM/YY)</label>
+
+            <div class="date-i">
+              <input  placeholder=" MM" ></input>
+              <input  placeholder=" YY"></input>
+            </div>
+
+          </div>
+
+          <div class="CVC">
+            <label for="">CVC</label>
+            <input  placeholder=" CVC"></input>
+          </div>
+
+        </div>
+
+        <button class="confirm-button">Confirm</button>
+      </div>
+    </section>
+  </main>
+
+
+
+
+  <!-- 0000 0000 0000 0000
   Jane Appleseed
   00/00
 
@@ -35,17 +84,8 @@
   CVC
   e.g. 123
 
-  Confirm
+  Confirm -->
 
   <!-- Completed state start -->
-
-  Thank you!
-  We've added your card details
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
