--- a/index.html
+++ b/index.html
@@ -21,27 +21,50 @@
     <section>
 
       <div class="cards">
-        <div class="recto card"></div>
-        <div class="verso card"></div>
+        <div class="recto card">
+            <div class="haut">
+              <span class="rond-1 rond"></span>
+              <span class="rond-2 rond"></span>
+            </div>
+            <div class="bas">
+
+              <p class="chiffre">1234 5678 9123 0000</p>
+
+              <div class="date-card">
+
+                <p class="p">Cardholder Name</p>
+                <p class="p">00/00</p>
+
+              </div>
+          </div>
+        </div>
+        <div class="verso card">
+
+          <span class="span-b"></span>
+          <div class="span-g">
+            <p class="span-text">123</p>
+          </div>
+
+        </div>
       </div>
 
       <div class="formulaire">
 
         <div class="first ligne">
           <label for="">Cardholder Name</label>
-          <input placeholder="""></input>
+          <input placeholder=" e.g. Jane Appleseed"></input>
         </div>
 
         <div class="second ligne">
           <label for="">Card Number</label>
-          <input  placeholder=""></input>
+          <input  placeholder="e.g. 1234 5678 9123 0000"></input>
         </div>
 
         <div class="third ligne">
 
           <div class="date">
 
-            <label for="">Exp.DATE  (MM/YY)</label>
+            <label >Exp.DATE  (MM/YY)</label>
 
             <div class="date-i">
               <input  placeholder=" MM" ></input>
@@ -51,8 +74,8 @@
           </div>
 
           <div class="CVC">
-            <label for="">CVC</label>
-            <input  placeholder=" CVC"></input>
+            <label >CVC</label>
+            <input  placeholder="e.g. 123"></input>
           </div>
 
         </div>
