--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
             </div>
             <div class="bas">
 
-              <p class="chiffre">1234 5678 9123 0000</p>
+              <p id="chiffre" class="chiffre">1234 5678 9123 0000</p>
 
               <div class="date-card">
 
-                <p class="p">Cardholder Name</p>
-                <p class="p">00/00</p>
+                <p id="name" class="p">Cardholder Name</p>
+                <div  class="p-line">
+                  <p id="month" class="p">00</p>
+                  <p class="p">/</p>
+                  <p id="year" class="p">00</p>
+                </div>
 
               </div>
           </div>
@@ -42,7 +46,7 @@
 
           <span class="span-b"></span>
           <div class="span-g">
-            <p class="span-text">123</p>
+            <p id="cvc" class="span-text">123</p>
           </div>
 
         </div>
@@ -52,12 +56,13 @@
 
         <div class="first ligne">
           <label for="">Cardholder Name</label>
-          <input placeholder=" e.g. Jane Appleseed"></input>
+          <input id="name-e" placeholder=" e.g. Jane Appleseed"></input>
         </div>
 
         <div class="second ligne">
           <label for="">Card Number</label>
-          <input  placeholder="e.g. 1234 5678 9123 0000"></input>
+          <input id="chiffre-e" placeholder="e.g. 1234 5678 9123 0000"></input>
+          <p id="alert-message">Wrong format, numbers only</p>
         </div>
 
         <div class="third ligne">
@@ -67,15 +72,15 @@
             <label >Exp.DATE  (MM/YY)</label>
 
             <div class="date-i">
-              <input  placeholder=" MM" ></input>
-              <input  placeholder=" YY"></input>
+              <input id="month-e" placeholder=" MM" ></input>
+              <input id="year-e" placeholder=" YY"></input>
             </div>
 
           </div>
 
           <div class="CVC">
             <label >CVC</label>
-            <input  placeholder="e.g. 123"></input>
+            <input id="cvc-e" placeholder="e.g. 123"></input>
           </div>
 
         </div>
@@ -85,30 +90,6 @@
     </section>
   </main>
 
-
-
-
-  <!-- 0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm -->
-
-  <!-- Completed state start -->
+  <script src="app.js"></script>
 </body>
 </html>
