checkRemplie js in work

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <p class="alert-message" id="year-alert" >Wrong format, numbers only</p>
         </div>
 
-        <button class="confirm-button">Confirm</button>
+        <button onclick="checkRemplie()" class="confirm-button">Confirm</button>
       </div>
     </section>
   </main>
